--- a/src/index.html
+++ b/src/index.html
@@ -2,35 +2,29 @@
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online-store</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Online-store</title>
 </head>
 
 <body>
-    <header>
-        <h1>Online-store</h1>
+  <div class="wrapper">
+    <header class="header flex">
+      <div class="header__info">
+        <img src="./img/logo.svg" alt="logo" class="header__logo">
+        <h1 class="header__title"><span class="block">Welcome to</span> online-store</h1>
+      </div>
+      <div class="header__price price">
+        <p class="price__text">Total price:</p>
+        <p class="price__total"></p>
+      </div>
+      <div class="header__basket basket">
+        <a href="#" class="basket__link"> <img src="./img/basket.svg" alt="logo" class="header__logo"></a>
+        <p class="basket__num"></p>
+      </div>
     </header>
-
-    <main>
-        <div class="img"></div>
-        <ul>
-            <li>
-                <img src="../src/img/pets-john.jpg" alt="cat" class="photo">
-            </li>
-            <li class="background">2</li>
-            <li>
-                <img src="./img/icon-phone.svg" alt="icon-phone" class="img-svg">
-            </li>
-            <li>
-            </li>
-        </ul>
-    </main>
-
-    <footer>
-        <div class="image"></div>
-    </footer>
+  </div>
 </body>
 
 </html>
