feat: add page router

--- a/src/index.html
+++ b/src/index.html
@@ -12,18 +12,22 @@
   <div class="wrapper">
     <header class="header flex">
       <div class="header__info">
-        <img src="./img/logo.svg" alt="logo" class="header__logo">
-        <h1 class="header__title"><span class="block">Welcome to</span> online-store</h1>
+        <a href="#main-page"><img src="./img/logo.svg" alt="logo" class="header__logo"> </a>
+        <h1 class="header__title"><span class="block">Online-store</h1>
       </div>
       <div class="header__price price">
         <p class="price__text">Total price:</p>
         <p class="price__total"></p>
       </div>
       <div class="header__basket basket">
-        <a href="#" class="basket__link"> <img src="./img/basket.svg" alt="logo" class="header__logo"></a>
+        <a href="#basket" class="basket__link"> <img src="./img/basket.svg" alt="logo" class="header__logo"></a>
         <p class="basket__num"></p>
       </div>
+
     </header>
+    <div class="main-container">
+    </div>
+    <a href="#products" class="product">product</a>
   </div>
 </body>
 
