feat: add cards generation, sort buttons

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,28 @@
       </div>
 
     </header>
-    <div class="main-container">
+    <div class="main">
+      <div class="main__filters filters"></div>
+      <div class="main__items items">
+        <div class="items__sorts"></div>
+        <div class="items__cards cards">
+          <div class="cards__item card">
+            <div class="card__image">
+              <img src="https://i.dummyjson.com/data/products/1/thumbnail.jpg" alt="product image" class="card__img">
+            </div>
+            <div class="card__about">
+              <h3 class="card__title">Telephone</h3>
+              <p class="card__brand">Apple</p>
+              <p class="card__price">$225</p>
+              <p class="card__stock">25</p>
+            </div>
+            <div class="card__act">
+              <button class="card__btn"></button>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
     <a href="#products" class="product">product</a>
   </div>
