fix: add main element

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
       </div>
 
     </header>
-    <div class="main">
+    <main class="main">
       <div class="main__filters filters"></div>
       <div class="main__items items">
         <div class="items__sorts"></div>
@@ -47,7 +47,7 @@
         </div>
       </div>
 
-    </div>
+    </main>
     <a href="#products" class="product">product</a>
   </div>
 </body>
