fix: change main-container class

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <div class="wrapper">
     <header class="header flex">
       <div class="header__info">
-        <a href="#main-page"><img src="./img/logo.svg" alt="logo" class="header__logo"> </a>
+        <a href="#main-container"><img src="./img/logo.svg" alt="logo" class="header__logo"> </a>
         <h1 class="header__title"><span class="block">Online-store</h1>
       </div>
       <div class="header__price price">
