--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,12 @@
                 <p class="price__total"></p>
             </div>
             <div class="header__basket basket">
-                <a href="#basket" class="basket__link"> <img src="./img/basket.svg" alt="basket" class="header__logo"></a>
-                <div class="basket__count">
-                    <p class="basket__num"></p>
-                </div>
+                <a href="#basket" class="basket__link">
+                    <div class="basket__count">
+                        <p class="basket__num"></p>
+                    </div>
+                    <img src="./img/basket.svg" alt="basket" class="header__logo"></a>
+
             </div>
 
         </header>
