--- a/src/index.html
+++ b/src/index.html
@@ -2,50 +2,50 @@
 <html lang="ru">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Online-store</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Online-store</title>
 </head>
 
 <body>
-  <div class="wrapper">
-    <header class="header flex">
-      <div class="header__info">
-        <a href="#main-container">
-          <img src="./img/logo.svg" alt="logo" class="header__logo">
-          <h1 class="header__title">Online-store</h1>
-        </a>
+    <div class="wrapper">
+        <header class="header flex">
+            <div class="header__info">
+                <a href="#main-container">
+                    <img src="./img/logo.svg" alt="logo" class="header__logo">
+                    <h1 class="header__title">Online-store</h1>
+                </a>
 
-      </div>
-      <div class="header__price price">
-        <p class="price__text">Total price:</p>
-        <p class="price__total"></p>
-      </div>
-      <div class="header__basket basket">
-        <a href="#basket" class="basket__link">
-          <div class="basket__count">
-            <p class="basket__num"></p>
-          </div>
-          <img src="./img/basket.svg" alt="basket" class="header__logo">
-        </a>
+            </div>
+            <div class="header__price price">
+                <p class="price__text">Total price:</p>
+                <p class="price__total"></p>
+            </div>
+            <div class="header__basket basket">
+                <a href="#basket" class="basket__link">
+                    <div class="basket__count">
+                        <p class="basket__num"></p>
+                    </div>
+                    <img src="./img/basket.svg" alt="basket" class="header__logo">
+                </a>
 
-      </div>
+            </div>
 
-    </header>
-    <main class="main">
-    </main>
-    <a href="#products" class="product">product</a>
-    <footer class="footer">
-      <div class="footer-container">
-        <a class="git-a" href="https://github.com/inni-ast/online-store">Online Store 2022</a>
-        <a class="logo-footer" href="https://rs.school/js/">
-          <img src="../src/img/rs_school_js.svg" alt="rs_school">
-        </a>
-      </div>
-    </footer>
-  </div>
-  <div class="overlay" id="overlay-modal"></div>
+        </header>
+        <main class="main">
+        </main>
+        <!-- <a href="#products" class="product">product</a> -->
+        <footer class="footer">
+            <div class="footer-container">
+                <a class="git-a" href="https://github.com/inni-ast/online-store">Online Store 2022</a>
+                <a class="logo-footer" href="https://rs.school/js/">
+                    <img src="../src/img/rs_school_js.svg" alt="rs_school">
+                </a>
+            </div>
+        </footer>
+    </div>
+    <div class="overlay" id="overlay-modal"></div>
 </body>
 
 </html>
